...
  Widget build(BuildContext context) {
    final dark = LHelperFunctions.isDarkMode(context);
    final calendarController = Provider.of<CalendarController>(context);

    return Scaffold(
      appBar: AppBar(
        title: const Text('Calendario'),
        backgroundColor: dark ? LColors.dark : LColors.light,
      ),
      backgroundColor:
          dark ? LColors.dark.withValues(alpha: 0.95) : LColors.light.withValues(alpha: 0.95),
      body: Column(
        children: [
...
