...
                  onPressed: () => OnBoardingController.instance.completeOnBoarding(),
                  child: Row(
                    mainAxisAlignment: MainAxisAlignment.start,
                    crossAxisAlignment: CrossAxisAlignment.center,
                    children: [
                      const Text(
                        "Comenzar",
                        style: TextStyle(
                          color: Colors.white, // Color del texto
                          fontSize: 24,
                          fontWeight: FontWeight.w600,
                        ),
                      ),
...
