...
          onPressed: () => Navigator.pop(context),
        ),
        title: TextField(
          controller: _searchController,
          autofocus: true,
          decoration: InputDecoration(
            hintText: 'Buscar evento',
            hintStyle: TextStyle(
                color: dark
                    ? LColors.textWhite.withOpacity(0.7)
                    : LColors.black.withOpacity(0.7)),
            border: InputBorder.none,
            suffixIcon: _searchController.text.isNotEmpty
...
                          color: dark
                              ? LColors.textWhite.withOpacity(0.5)
                              : LColors.black.withOpacity(0.5),
                        ),
                        SizedBox(height: LSizes.spaceBtwItems),
                        Text(
                          'Busca eventos por título',
                          style:
                              Theme.of(context).textTheme.bodyLarge?.copyWith(
                                    color: dark
                                        ? LColors.textWhite.withOpacity(0.7)
                                        : LColors.black.withOpacity(0.7),
                                  ),
...
