...
                  color: isUpcomingSelected
                      ? (dark ? LColors.white.withValues(alpha: 0.1) : Colors.white)
                      : Colors.transparent,
                  borderRadius: BorderRadius.circular(8),
                ),
                child: Text(
                  'Proximos',
                  style: TextStyle(
                    color: isUpcomingSelected
                        ? (dark ? LColors.textWhite : LColors.dark)
                        : (dark ? LColors.textWhite : LColors.darkGrey),
                    fontWeight: FontWeight.w600,
                  ),
...
                  color: !isUpcomingSelected
                      ? (dark ? LColors.white.withValues(alpha: 0.1) : Colors.white)
                      : Colors.transparent,
                  borderRadius: BorderRadius.circular(8),
                ),
                child: Text(
                  'Pasados',
                  style: TextStyle(
                    color: !isUpcomingSelected
                        ? (dark ? LColors.textWhite : LColors.dark)
                        : (dark ? LColors.textWhite : LColors.darkGrey),
                    fontWeight: FontWeight.w600,
                  ),
...
