...
            activeIcon: Icon(Iconsax.calendar),
            label: 'Calendar',
          ),
          BottomNavigationBarItem(
            icon: Icon(Iconsax.notification),
            activeIcon: Icon(Iconsax.notification5),
            label: 'Suscripciones',
          ),
          BottomNavigationBarItem(
            icon: Icon(Iconsax.people),
            activeIcon: Icon(Iconsax.profile_2user),
            label: 'Speakers',
          ),
...
